update food website

--- a/food-website/sign-up.html
+++ b/food-website/sign-up.html
@@ -44,14 +44,16 @@
                 <h3>Sign up</h3>
 
                 <form>
-                    <input placeholder="Username" type='text' />
-                    <input placeholder="Email-id" type='text' />
+                    <input class='username-input' placeholder="Username" type='text' />
+                    <input class='email-id-input' placeholder="Email-id" type='text' />
                     <input placeholder="Mobile-no (optional)" type='text' />
-                    <input placeholder="Password" type='text' />
-                    <input placeholder="Password-re-check" type='text' />
+                    <input class='password-input' placeholder="Password" type='text' />
+                    <input class='password-re-check-input' placeholder="Password-re-check" type='text' />
                 </form>
                 <br>
                 <button class='sign-up-button'>Sign Up</button>
+
+                <script src='sign-up.html'></script>
 
             </div>
         </div>
