update food website

--- a/food-website/sign-up.html
+++ b/food-website/sign-up.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -40,20 +39,22 @@
 
             <div class='main-page'>
 
-
                 <h3>Sign up</h3>
 
                 <form>
                     <input class='username-input' placeholder="Username" type='text' />
                     <input class='email-id-input' placeholder="Email-id" type='text' />
-                    <input placeholder="Mobile-no (optional)" type='text' />
-                    <input class='password-input' placeholder="Password" type='text' />
-                    <input class='password-re-check-input' placeholder="Password-re-check" type='text' />
+                    <input placeholder="Mobile-no (optional)" type='number' />
+                    <input class='password-input' placeholder="Password" type='password' />
+                    <input class='password-re-check-input' placeholder="Password-re-check" type='password' />
                 </form>
                 <br>
+
                 <button class='sign-up-button'>Sign Up</button>
 
-                <script src='sign-up.html'></script>
+                <div class='show-error-div'></div>
+
+                <script src='js/sign-up-script.js'></script>
 
             </div>
         </div>
