updating food-website

--- a/food-website/sign-up.html
+++ b/food-website/sign-up.html
@@ -3,6 +3,8 @@
 <head>
     <link rel="stylesheet" href="style/sign-up-style.css" />
 
+    <link rel="stylesheet" href="style/sign-up-style-responsive.css" />
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
@@ -27,6 +29,7 @@
 
     <body>
         <div class="container">
+
             <div class="left-sidebar">
                 <h1>Food Website</h1>
 
