updating food-website

--- a/food-website/index.html
+++ b/food-website/index.html
@@ -52,9 +52,11 @@
 
                 </div>
 
+                <div class='nav-bar-container'></div>
+
                 <nav>
 
-                    <ul>
+                    <ul class='nav-bar'>
 
                         <li><a href="header-section">Home</a></li>
 
@@ -67,7 +69,7 @@
                             <a href='#testimonials-section'>Testimonials</a>
                         </li>
 
-                        <li><button class='log-in-button'><a href='#'>Log-in/Sign-up</a></button></li>
+                        <li><button class='log-in-button'><a href='#'>Log-in / Sign-up</a></button></li>
 
                         <li><a href='#contact-us-section'>Contact Us</a></li>
 
@@ -114,7 +116,6 @@
                         <img src='images/website-images/pizza-png-19310 (1).png'>
 
                     </div>
-
 
                 </div>
 
@@ -565,12 +566,13 @@
         </footer>
 
 
-
         <script src='js/log-in-box-script.js'></script>
 
         <script src='js/customer-service-button.js'></script>
 
         <script src='js/contact-us.js'></script>
+
+        <script src='js/mobile-nav-bar-scirpt.js'></script>
 
     </body>
 </head>
