Updating food website

--- a/food-website/index.html
+++ b/food-website/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 
 <head>
+
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css' rel="stylesheet">
+
     <link rel='stylesheet' href='style/style.css'>
 
     <link rel='stylesheet' href='style/style-js.css'>
@@ -90,7 +95,7 @@
                     <div class='header-text-div'>
 
                         <h2>Download our application,on Android / Ios.</h2>
-
+                        <br>
                         <div class='header-buttons-container'>
 
                             <div class='header-buttons-icons-container'>
@@ -145,7 +150,7 @@
 
                     <img class='icon-images' src='icon-images/thumb.png'>
 
-                    <h1>Best Service</h1>
+                    <p>Best Service</p>
 
                 </div>
 
@@ -154,7 +159,7 @@
 
                     <img class='icon-images' src='icon-images/thumb.png'>
 
-                    <h1>Best Service</h1>
+                    <p>Best Service</p>
 
                 </div>
 
@@ -162,7 +167,7 @@
 
                     <img class='icon-images' src='icon-images/thumb.png'>
 
-                    <h1>Best Service</h1>
+                    <p>Best Service</p>
                 </div>
 
             </div>
