--- a/food-website/sign-up.html
+++ b/food-website/sign-up.html
@@ -1,9 +1,7 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style/sign-up-style.css" />
-
-    <link rel="stylesheet" href="style/sign-up-style-responsive.css" />
+    <link rel='stylesheet' href='style/sign-up-style.css'>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
@@ -22,43 +20,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet" />
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up Food Website</title>
 
     <body>
-        <div class="container">
 
-            <div class="left-sidebar">
+        <div class='container'>
+
+            <div class='left-sidebar'>
+
                 <h1>Food Website</h1>
 
-                <img class="icon-images" src="icon-images/man (3).png" />
+                <img class='icon-images' src='icon-images/man (3).png'>
+
             </div>
 
-            <div class="main-page">
-                <h2>Create Your Account</h2>
-                <br />
+            <div class='main-page'>
+
                 <h3>Sign up</h3>
 
                 <form>
-                    <input class="username-input" placeholder="Username" type="text" />
-                    <input class="email-id-input" placeholder="Email-id" type="text" />
-                    <input placeholder="Mobile-no (optional)" type="number" />
-                    <input class="password-input" placeholder="Password" type="password" />
-                    <input class="password-re-check-input" placeholder="Password-re-check" type="password" />
+                    <input class='username-input' placeholder="Username" type='text' />
+                    <input class='email-id-input' placeholder="Email-id" type='text' />
+                    <input placeholder="Mobile-no (optional)" type='number' />
+                    <input class='password-input' placeholder="Password" type='password' />
+                    <input class='password-re-check-input' placeholder="Password-re-check" type='password' />
                 </form>
-                <div class="show-error-div"></div>
+                <br>
 
-                <div class="button-container">
-                    <button class="sign-up-button">Sign Up</button>
-                    <button class="sign-up-button">Sign Up with Google</button>
-                    <button class="sign-up-button">Sign Up with Facebook</button>
-                </div>
+                <button class='sign-up-button'>Sign Up</button>
 
-                <script src="js/sign-up-script.js"></script>
+                <div class='show-error-div'></div>
+
+                <script src='js/sign-up-script.js'></script>
+
             </div>
         </div>
+
     </body>
 </head>
 
