--- a/food-website/index.html
+++ b/food-website/index.html
@@ -3,10 +3,6 @@
 
 <head>
 
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css' rel="stylesheet">
-
     <link rel='stylesheet' href='style/style.css'>
 
     <link rel='stylesheet' href='style/style-js.css'>
@@ -28,14 +24,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300&display=swap" rel="stylesheet" />
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <body>
+<body>
 
         <section class='header-section'>
 
@@ -47,7 +41,7 @@
 
                     <div class='nav-bar-icon-div'>
 
-                        <button class='nav-bar-button'>
+                        <button class = "nav-bar-button">
 
                                 <ion-icon class='nav-bar-icon' name="menu"></ion-icon>
 
@@ -57,11 +51,9 @@
 
                 </div>
 
-                <div class='nav-bar-container'></div>
-
                 <nav>
 
-                    <ul class='nav-bar'>
+                    <ul>
 
                         <li><a href="header-section">Home</a></li>
 
@@ -74,7 +66,7 @@
                             <a href='#testimonials-section'>Testimonials</a>
                         </li>
 
-                        <li><button class='log-in-button'><a href='#'>Log-in / Sign-up</a></button></li>
+                        <li><button class='log-in-button'><a href='#'>Log-in/Sign-up</a></button></li>
 
                         <li><a href='#contact-us-section'>Contact Us</a></li>
 
@@ -95,7 +87,7 @@
                     <div class='header-text-div'>
 
                         <h2>Download our application,on Android / Ios.</h2>
-                        <br>
+
                         <div class='header-buttons-container'>
 
                             <div class='header-buttons-icons-container'>
@@ -121,6 +113,7 @@
                         <img src='images/website-images/pizza-png-19310 (1).png'>
 
                     </div>
+
 
                 </div>
 
@@ -150,7 +143,7 @@
 
                     <img class='icon-images' src='icon-images/thumb.png'>
 
-                    <p>Best Service</p>
+                    <h1>Best Service</h1>
 
                 </div>
 
@@ -159,7 +152,7 @@
 
                     <img class='icon-images' src='icon-images/thumb.png'>
 
-                    <p>Best Service</p>
+                    <h1>Best Service</h1>
 
                 </div>
 
@@ -167,7 +160,7 @@
 
                     <img class='icon-images' src='icon-images/thumb.png'>
 
-                    <p>Best Service</p>
+                    <h1>Best Service</h1>
                 </div>
 
             </div>
@@ -378,6 +371,7 @@
                 </div>
 
             </div>
+
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill=" rgb(223, 26, 0)" fill-opacity="1" d="M0,224L48,197.3C96,171,192,117,288,128C384,139,480,213,576,208C672,203,768,117,864,106.7C960,96,1056,160,1152,160C1248,160,1344,96,1392,64L1440,32L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>            </section>
 
 
@@ -569,17 +563,18 @@
             </div>
 
         </footer>
+        <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+        <script src="js/log-in-box-script.js"></script>
 
+        <script src="js/customer-service-button.js"></script>
 
-        <script src='js/log-in-box-script.js'></script>
+        <script src="js/contact-us.js"></script>
 
-        <script src='js/customer-service-button.js'></script>
-
-        <script src='js/contact-us.js'></script>
-
-        <script src='js/mobile-nav-bar-scirpt.js'></script>
+        <script src="js/mobile-navigation-bar.js"></script>
 
     </body>
+
 </head>
 
 </html>
