updating food-website

--- a/food-website/index.html
+++ b/food-website/index.html
@@ -9,6 +9,8 @@
 
     <link rel='stylesheet' href='style/style-responsive.css'>
 
+    <link rel='stylesheet' href='style/mobile-navigation-bar-style.css'>
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
@@ -29,7 +31,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-<body>
+
+    <body>
 
         <section class='header-section'>
 
@@ -41,7 +44,7 @@
 
                     <div class='nav-bar-icon-div'>
 
-                        <button class = "nav-bar-button">
+                        <button class="nav-bar-button">
 
                                 <ion-icon class='nav-bar-icon' name="menu"></ion-icon>
 
@@ -53,7 +56,7 @@
 
                 <nav>
 
-                    <ul>
+                    <ul class='navigation-bar'>
 
                         <li><a href="header-section">Home</a></li>
 
@@ -75,6 +78,8 @@
                 </nav>
 
             </div>
+
+            <div class='nav-bar-container'></div>
 
             <div class='log-in-box-container'></div>
 
@@ -572,6 +577,7 @@
         <script src="js/contact-us.js"></script>
 
         <script src="js/mobile-navigation-bar.js"></script>
+
 
     </body>
 
