--- a/food-website/index.html
+++ b/food-website/index.html
@@ -465,8 +465,18 @@
 
                 </div>
 
+            </div>
+<br>
+            <div class="view-feedback-div">
+
+            <button class="view-feedback-button">View All Feedback</button>
 
             </div>
+
+                <div class="feedback-box-div">
+
+                </div>
+
 
         </section>
 
@@ -540,7 +550,7 @@
 
             <button class='customer-service-button'>
                     <ion-icon class='customer-service-icon' name="chatbox-ellipses-outline"></ion-icon>
-                </button>
+            </button>
 
         </div>
 
@@ -570,7 +580,10 @@
         </footer>
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
         <script src="js/log-in-box-script.js"></script>
+
+        <script src="js/feedback-box-script.js"></script>
 
         <script src="js/customer-service-button.js"></script>
 
