updating food-website

--- a/food-website/index.html
+++ b/food-website/index.html
@@ -475,6 +475,103 @@
 
                 <div class="feedback-box-div">
 
+                    <h2>All Reviews</h2>
+
+                    <div class="all-feedback-box-column">
+
+                        <div class="feedback-box-row">
+
+                            <img src="images/customer-images/customer-2.jpg"/>
+
+                            <div class="feedback-box-column">
+
+                            <h3>John Doe</h3>
+
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis risus quis augue bibendum, sit amet egestas tellus tempor.</p>
+
+                                <div class="feedback-box-icons-row">
+
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+                                <ion-icon name="star"></ion-icon>
+
+                                </div>
+                            </div>
+
+                        </div>
+
+                        <div class="feedback-box-row">
+
+                            <img src="images/customer-images/customer-1.jpg"/>
+
+                            <div class="feedback-box-column">
+
+                                <h3>John Doe</h3>
+
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis risus quis augue bibendum, sit amet egestas tellus tempor.</p>
+                                <div class="feedback-box-icons-row">
+
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="feedback-box-row">
+
+                            <img src="images/customer-images/customer-1.jpg"/>
+
+                            <div class="feedback-box-column">
+
+                                <h3>John Doe</h3>
+
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis risus quis augue bibendum, sit amet egestas tellus tempor.</p>
+                                <div class="feedback-box-icons-row">
+
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="feedback-box-row">
+
+                            <img src="images/customer-images/customer-1.jpg"/>
+
+                            <div class="feedback-box-column">
+
+                                <h3>John Doe</h3>
+
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis risus quis augue bibendum, sit amet egestas tellus tempor.</p>
+
+                                <div class="feedback-box-icons-row">
+
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+
                 </div>
 
 
@@ -590,7 +687,6 @@
         <script src="js/contact-us.js"></script>
 
         <script src="js/mobile-navigation-bar.js"></script>
-
 
     </body>
 
