updating food website

--- a/food-website/index.html
+++ b/food-website/index.html
@@ -498,28 +498,7 @@
                                 <ion-icon name="star"></ion-icon>
 
                                 </div>
-                            </div>
 
-                        </div>
-
-                        <div class="feedback-box-row">
-
-                            <img src="images/customer-images/customer-1.jpg"/>
-
-                            <div class="feedback-box-column">
-
-                                <h3>John Doe</h3>
-
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis risus quis augue bibendum, sit amet egestas tellus tempor.</p>
-                                <div class="feedback-box-icons-row">
-
-                                    <ion-icon name="star"></ion-icon>
-                                    <ion-icon name="star"></ion-icon>
-                                    <ion-icon name="star"></ion-icon>
-                                    <ion-icon name="star"></ion-icon>
-                                    <ion-icon name="star"></ion-icon>
-
-                                </div>
 
                             </div>
 
@@ -557,7 +536,6 @@
                                 <h3>John Doe</h3>
 
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis risus quis augue bibendum, sit amet egestas tellus tempor.</p>
-
                                 <div class="feedback-box-icons-row">
 
                                     <ion-icon name="star"></ion-icon>
@@ -571,6 +549,37 @@
                             </div>
 
                         </div>
+
+                        <div class="feedback-box-row">
+
+                            <img src="images/customer-images/customer-1.jpg"/>
+
+                            <div class="feedback-box-column">
+
+                                <h3>John Doe</h3>
+
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin mollis risus quis augue bibendum, sit amet egestas tellus tempor.</p>
+
+                                <div class="feedback-box-icons-row">
+
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+                                    <ion-icon name="star"></ion-icon>
+
+                                </div>
+
+                            </div>
+
+
+                        </div>
+<br>
+                        <div class="add-feedback-box-button-div">
+
+                        <button class="add-feedback-box-button">Give Your Feedback</button>
+
+                            </button>
 
                 </div>
 
