update food website

--- a/food-website/index.html
+++ b/food-website/index.html
@@ -296,7 +296,7 @@
                     </div>
                     <br>
                     <br>
-                    <a href='#'>Buy Now ( $399 / <span>month</span> )</a>
+                    <a class="orange-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
 
                 </div>
 
@@ -334,7 +334,7 @@
                     </div>
                     <br>
                     <br>
-                    <a href='#'>Buy Now ( $399 / <span>month</span> )</a>
+                    <a class="orange-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
 
                 </div>
 
@@ -371,7 +371,7 @@
                     </div>
                     <br>
                     <br>
-                    <a href='#'>Buy Now ( $399 / <span>month</span> )</a>
+                    <a class="orange-button" href='#'>Buy Now ( $399 / <span>month</span> )</a>
 
                 </div>
 
@@ -469,7 +469,7 @@
 <br>
             <div class="view-feedback-div">
 
-            <button class="view-feedback-button">View All Feedback</button>
+            <button class="orange-button view-feedback-button">View All Feedback</button>
 
             </div>
 
@@ -610,7 +610,7 @@
 
                     <textarea value='Write Down your Problem'></textarea>
 
-                    <button class='submit-button'>Submit</button>
+                    <button class="orange-button">Submit</button>
 
                 </form>
 
