updating sign up page

--- a/food-website/sign-up.html
+++ b/food-website/sign-up.html
@@ -3,6 +3,8 @@
 <head>
     <link rel='stylesheet' href='style/sign-up-style.css'>
 
+    <link rel='stylesheet' href='style/sign-up-style-responsive.css'>
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
@@ -40,7 +42,7 @@
             <div class='main-page'>
 
                 <h3>Sign up</h3>
-
+<br>
                 <form>
                     <input class='username-input' placeholder="Username" type='text' />
                     <input class='email-id-input' placeholder="Email-id" type='text' />
@@ -50,7 +52,15 @@
                 </form>
                 <br>
 
+<div class="button-container">
+
                 <button class='sign-up-button'>Sign Up</button>
+
+
+                <button >Sign Up With Google</button>
+
+                <button>Sign Up With Facebook</button>
+</div>
 
                 <div class='show-error-div'></div>
 
