--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -5,6 +5,10 @@
 
     <link rel='stylesheet' href='style/style.css'>
 
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
     <link rel="preconnect" href="https://fonts.gstatic.com" />
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet" />
@@ -59,7 +63,7 @@
 
             <div class="header-content">
 
-                <div class="header-img-div">
+                <div class="">
 
                     <h1>Lorem ipsum dolor sit amet,<br> consectetur adipiscing elit.</h1>
 
@@ -81,7 +85,6 @@
 
                 </div>
 
-
                 <div class="header-img-div">
 
                 <img src="images/icon-images/verified.png">
@@ -90,7 +93,166 @@
 
             </div>
 
+            <h3 class="header-heading">OUR PLANS</h3>
+
+            <div class="line"></div>
+
         </header>
+
+        <div class="service-section">
+
+            <div class="service-section-box">
+
+                <img src="images/icon-images/security.png">
+
+                <p>Security</p>
+
+            </div>
+
+            <div class="service-section-box">
+
+                <img src="images/icon-images/security.png">
+
+                <p>Security</p>
+
+            </div>
+
+            <div class="service-section-box">
+
+                <img src="images/icon-images/security.png">
+
+                <p>Security</p>
+
+            </div>
+
+        </div>
+
+
+        <section class="plans-section">
+
+            <h3>OUR SERVICE</h3>
+
+            <div class="line"></div>
+
+            <div class="plans-container">
+
+                <div class="plans-div">
+
+                    <h2>Plan A</h2>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                    <br>
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+                    <br>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                    <br>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                </div>
+
+                <div class="plans-div">
+
+                    <h2>Plan B</h2>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                    <br>
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+                    <br>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                    <br>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                </div>
+
+                <div class="plans-div">
+
+                    <h2>Plan C</h2>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                    <br>
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+                    <br>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                    <br>
+
+                    <div class="plans-icon-text-row">
+
+                        <ion-icon name="shield-checkmark-outline"></ion-icon>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                    </div>
+
+                </div>
+
+            </div>
+<br>
+        </section>
 
     </body>
 
