updating service section

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -93,9 +93,14 @@
 
             </div>
 
-            <h3 class="header-heading">OUR PLANS</h3>
 
-            <div class="line"></div>
+            <div class="headings-container">
+
+                <h2>Our Service</h2>
+
+                <div class="line"></div>
+
+            </div>
 
         </header>
 
@@ -130,9 +135,15 @@
 
         <section class="plans-section">
 
-            <h3>OUR SERVICE</h3>
+            <div class="headings-container">
+
+            <h2>PLANS</h2>
 
             <div class="line"></div>
+
+            </div>
+
+            <br>
 
             <div class="plans-container">
 
@@ -171,6 +182,8 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
                     </div>
+<br>
+                    <button href="#">View Plan</button>
 
                 </div>
 
@@ -210,6 +223,10 @@
 
                     </div>
 
+                    <br>
+
+                    <button href="#">View Plan</button>
+
                 </div>
 
                 <div class="plans-div">
@@ -247,11 +264,13 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 
                     </div>
+                    <br>
+
+                    <button href="#">View Plan</button>
 
                 </div>
 
             </div>
-<br>
         </section>
 
     </body>
