adding features section

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -93,7 +93,6 @@
 
             </div>
 
-
             <div class="headings-container">
 
                 <h2>Our Service</h2>
@@ -131,7 +130,6 @@
             </div>
 
         </div>
-
 
         <section class="plans-section">
 
@@ -272,6 +270,117 @@
 
             </div>
         </section>
+
+        <br>
+<section class="features-section">
+
+    <div class="headings-container">
+
+        <h2>Features</h2>
+
+        <div class="line"></div>
+
+    </div>
+    <br>
+
+    <div class="features-container">
+
+        <div class="features-div">
+
+            <div class="features-img-heading-row">
+
+            <img src="images/icon-images/stopwatch.png"/>
+
+            <p>Speed</p>
+
+            </div>
+            <br>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
+
+        </div>
+
+
+        <div class="features-div">
+
+            <div class="features-img-heading-row">
+
+                <img src="images/icon-images/stopwatch.png"/>
+
+                <p>Speed</p>
+
+            </div>
+<br>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
+
+        </div>
+
+
+        <div class="features-div">
+
+            <div class="features-img-heading-row">
+
+                <img src="images/icon-images/stopwatch.png"/>
+
+                <p>Speed</p>
+
+            </div>
+<br>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
+
+        </div>
+
+    </div>
+
+
+    <div class="features-container">
+
+        <div class="features-div">
+
+            <div class="features-img-heading-row">
+
+                <img src="images/icon-images/stopwatch.png"/>
+
+                <p>Speed</p>
+
+            </div>
+            <br>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
+
+        </div>
+
+
+        <div class="features-div">
+
+            <div class="features-img-heading-row">
+
+                <img src="images/icon-images/stopwatch.png"/>
+
+                <p>Speed</p>
+
+            </div>
+<br>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
+
+        </div>
+
+
+        <div class="features-div">
+
+            <div class="features-img-heading-row">
+
+                <img src="images/icon-images/stopwatch.png"/>
+
+                <p>Speed</p>
+
+            </div>
+<br>
+            <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </span>
+
+        </div>
+
+    </div>
+
+</section>
 
     </body>
 
