adding accessiblity section

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -3,6 +3,10 @@
 
 <head>
 
+    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css' rel="stylesheet">
+
     <link rel='stylesheet' href='style/style.css'>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
@@ -281,6 +285,7 @@
         <div class="line"></div>
 
     </div>
+
     <br>
 
     <div class="features-container">
@@ -380,6 +385,80 @@
 
     </div>
 
+</section>
+
+
+        <section class="accessibility-section">
+
+            <div class="headings-container">
+
+                <h2>Accessibility</h2>
+
+                <div class="line"></div>
+
+            </div>
+
+            <br>
+
+            <div class="accessibility-div">
+
+            <img src="images/website-images/52611.png"/>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sapien velit, convallis ac fringilla ut, iaculis quis elit.<br>Curabitur velit lectus, porta ac libero a, semper ornare diam.  </p>
+
+            </div>
+
+            <h3>DOWNLOAD OUR APPLICATION</h3>
+
+            <div class="accessibility-icon-text-div-container">
+
+            <div class="accessibility-icon-text-div">
+
+                <ion-icon name="logo-windows"></ion-icon>
+
+                <p>Windows</p>
+
+            </div>
+
+            <div class="accessibility-icon-text-div">
+
+                <ion-icon name="logo-windows"></ion-icon>
+
+                <p>Linux</p>
+            </div>
+                <div class="accessibility-icon-text-div">
+
+                    <ion-icon name="logo-apple"></ion-icon>
+
+                    <p>Mac OS</p>
+                </div>
+
+                <div class="accessibility-icon-text-div">
+
+                    <ion-icon name="logo-android"></ion-icon>
+
+                    <p>Android</p>
+                </div>
+                <div class="accessibility-icon-text-div">
+
+                    <ion-icon name="logo-apple-appstore"></ion-icon>
+
+                    <p>IOS</p>
+                </div>
+
+            </div>
+
+        </section>
+
+<section class="feedback-section">
+    <br>
+    <div class="headings-container">
+
+        <h2>Feedback</h2>
+
+        <div class="line"></div>
+
+    </div>
 </section>
 
     </body>
