adding feedback section

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -286,8 +286,6 @@
 
     </div>
 
-    <br>
-
     <div class="features-container">
 
         <div class="features-div">
@@ -398,7 +396,6 @@
 
             </div>
 
-            <br>
 
             <div class="accessibility-div">
 
@@ -459,6 +456,37 @@
         <div class="line"></div>
 
     </div>
+
+    <br>
+
+    <div class="feedback-container">
+
+        <div class="feedback-div">
+
+            <img src="images/customer-images/customer-1.jpg"/>
+<br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
+
+        </div>
+
+        <div class="feedback-div">
+
+            <img src="images/customer-images/customer-2.jpg"/>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
+
+        </div>
+
+        <div class="feedback-div">
+
+            <img src="images/customer-images/customer-3.jpg"/>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
+
+        </div>
+
+    </div>
+
 </section>
 
     </body>
