--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -33,8 +33,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tech Website</title>
+    <link rel="stylesheet" href="style/footer.scss">
+    <link rel="stylesheet" href="style/accessibility.scss">
 
-    <body>
+<body>
 
 
         <header>
@@ -396,6 +398,8 @@
 
             </div>
 
+<br>
+            <h3>The largest VPN server network in the world</h3>
 
             <div class="accessibility-div">
 
@@ -467,6 +471,20 @@
 <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
 
+            <div class="icons-container">
+
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star-outline"></ion-icon>
+
+            </div>
+
+            <div class="feedback-name-div">
+            <p>By John Doe</p>
+            </div>
+
         </div>
 
         <div class="feedback-div">
@@ -474,6 +492,20 @@
             <img src="images/customer-images/customer-2.jpg"/>
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
+
+            <div class="icons-container">
+
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star-outline"></ion-icon>
+
+            </div>
+
+            <div class="feedback-name-div">
+                <p>By John Doe</p>
+            </div>
 
         </div>
 
@@ -483,11 +515,50 @@
             <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus ut tristique enim. Aliquam erat volutpat. Aenean tempus auctor dignissim.</p>
 
-        </div>
+            <div class="icons-container">
 
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star"></ion-icon>
+                <ion-icon name="star-outline"></ion-icon>
+
+            </div>
+
+            <div class="feedback-name-div">
+                <p>By John Doe</p>
+            </div>
+
+        </div>
     </div>
 
 </section>
+
+        <section class="">
+
+        </section>
+
+<footer>
+<br>
+    <h2>TECH WEBSITE</h2>
+
+    <table>
+
+        <tr>
+            <th>Home</th>
+            <th>Home</th>
+            <th>Home</th>
+        </tr>
+
+        <tr>
+            <td>Home</td>
+            <td>Home</td>
+            <td>Home</td>
+        </tr>
+
+    </table>
+
+</footer>
 
     </body>
 
