--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -3,9 +3,9 @@
 
 <head>
 
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css' rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
 
     <link rel='stylesheet' href='style/style.css'>
 
@@ -35,6 +35,9 @@
     <title>Tech Website</title>
     <link rel="stylesheet" href="style/footer.scss">
     <link rel="stylesheet" href="style/accessibility.scss">
+    <link rel="stylesheet" href="style/header.scss">
+    <script src="js/log-in-box-script.js"></script>
+    <link rel="stylesheet" href="style/features.scss">
 
 <body>
 
@@ -83,9 +86,9 @@
 
                     <div class="button-container">
 
-                        <button>Download</button>
+                        <button>Create Your Account</button>
 
-                        <button>Download</button>
+                        <button class="log-in-button">Log in</button>
 
                     </div>
 
@@ -409,7 +412,15 @@
 
             </div>
             <br>
-            <h3>DOWNLOAD OUR APPLICATION</h3>
+
+            <div class="headings-container">
+                <h3>DOWNLOAD OUR APPLICATION</h3>
+
+                <div class="line"></div>
+
+            </div>
+
+            <br>
 
             <div class="accessibility-icon-text-div-container">
 
@@ -421,12 +432,6 @@
 
             </div>
 
-            <div class="accessibility-icon-text-div">
-
-                <ion-icon name="logo-windows"></ion-icon>
-
-                <p>Linux</p>
-            </div>
                 <div class="accessibility-icon-text-div">
 
                     <ion-icon name="logo-apple"></ion-icon>
@@ -451,6 +456,7 @@
 
         </section>
 
+        <br>
 <section class="feedback-section">
     <br>
     <div class="headings-container">
@@ -534,9 +540,7 @@
 
 </section>
 
-        <section class="">
-
-        </section>
+        <div class="border"></div>
 
 <footer>
 <br>
@@ -548,9 +552,25 @@
             <th>Home</th>
             <th>Home</th>
             <th>Home</th>
+            <th>Home</th>
         </tr>
 
         <tr>
+            <td>Home</td>
+            <td>Home</td>
+            <td>Home</td>
+            <td>Home</td>
+        </tr>
+
+        <tr>
+            <td>Home</td>
+            <td>Home</td>
+            <td>Home</td>
+            <td>Home</td>
+        </tr>
+
+        <tr>
+            <td>Home</td>
             <td>Home</td>
             <td>Home</td>
             <td>Home</td>
@@ -559,6 +579,8 @@
     </table>
 
 </footer>
+
+<script src="js/log-in-box-script.js"></script>
 
     </body>
 
