adding sign-up-page

--- a/tech-website/index.html
+++ b/tech-website/index.html
@@ -36,15 +36,16 @@
     <link rel="stylesheet" href="style/footer.scss">
     <link rel="stylesheet" href="style/accessibility.scss">
     <link rel="stylesheet" href="style/header.scss">
-    <script src="js/log-in-box-script.js"></script>
     <link rel="stylesheet" href="style/features.scss">
+
+</head>
 
 <body>
 
-
-        <header>
+        <header class="header">
 
             <br>
+
             <nav>
 
                 <div class="page-heading">
@@ -86,7 +87,7 @@
 
                     <div class="button-container">
 
-                        <button>Create Your Account</button>
+                        <button class="create-account-button">Create Your Account</button>
 
                         <button class="log-in-button">Log in</button>
 
@@ -580,7 +581,7 @@
 
 </footer>
 
-<script src="js/log-in-box-script.js"></script>
+<script src="js/script.js"></script>
 
     </body>
 
